Removed Send and Sync requirements from Future types and generic functions

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,15 @@
 [workspace]
 members = [
 	"core",
-	"http",
-	"ipc",
+#	"http",
+#	"ipc",
 	"macros",
-	"minihttp",
+#	"minihttp",
 	"pubsub",
-	"pubsub/more-examples",
-	"server-utils",
-	"stdio",
-	"tcp",
-	"test",
-	"ws",
+#	"pubsub/more-examples",
+#	"server-utils",
+#	"stdio",
+#	"tcp",
+#	"test",
+#	"ws",
 ]
