--- a/macros/Cargo.toml
+++ b/macros/Cargo.toml
@@ -16,7 +16,7 @@ jsonrpc-pubsub = { version = "9.0", path = "../pubsub" }
 
 [dev-dependencies]
 serde_json = "1.0"
-jsonrpc-tcp-server = { version = "9.0", path = "../tcp" }
+# jsonrpc-tcp-server = { version = "9.0", path = "../tcp" }
 
 [badges]
 travis-ci = { repository = "paritytech/jsonrpc", branch = "master"}
