--- a/pubsub/Cargo.toml
+++ b/pubsub/Cargo.toml
@@ -15,7 +15,7 @@ parking_lot = "0.6"
 jsonrpc-core = { version = "9.0", path = "../core" }
 
 [dev-dependencies]
-jsonrpc-tcp-server = { version = "9.0", path = "../tcp" }
+# jsonrpc-tcp-server = { version = "9.0", path = "../tcp" }
 
 [badges]
 travis-ci = { repository = "paritytech/jsonrpc", branch = "master"}
